--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 CHANGES file for AGHAST Server
 ==============================
 
+AGHAST v0.3.0 (released 2021-XX-XX)
+- WARNING: There are breaking changes to the configuration files in this release.
+- Major Changes: Automation Events fields renamed to 'Key' and 'Value'.
+- New Features:  mqtt2smtp MQTT-to-Email Integration added.
+- Bug Fixes:     Issue #14 (Goroutine leak) and related bugs and races were fixed.
+  
 AGHAST v0.2.0 (released 2021-08-09)
 - WARNING: There are breaking changes to the configuration files in this release.
 - Major Changes: The internal event system has been scrapped in favour of using an all-MQTT approach.
