--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,13 +2,14 @@ CHANGES file for AGHAST Server
 ==============================
 
 AGHAST v0.3.0 (released 2021-XX-XX)
-- WARNING: There are breaking changes to the configuration files in this release.
+- WARNING: There are breaking changes to the Automation configuration files in this release.
 - Major Changes: Automation Events fields renamed to 'Key' and 'Value'.
 - New Features:  mqtt2smtp MQTT-to-Email Integration added.
 - Bug Fixes:     Issue #14 (Goroutine leak) and related bugs and races were fixed.
+                 Unnecessary [Event] section in Automation TOML files removed.
   
 AGHAST v0.2.0 (released 2021-08-09)
-- WARNING: There are breaking changes to the configuration files in this release.
+- WARNING: There are breaking changes to the Automation configuration files in this release.
 - Major Changes: The internal event system has been scrapped in favour of using an all-MQTT approach.
                  Automations are now triggered by MQTT messages.
                  Several no-longer-needed Integrations have been removed.
