--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,9 @@
 CHANGES file for AGHAST Server
 ==============================
 
+AGHAST v0.5.1 (release 2022-05-08) - Fix PostgreSQL Logging Issue
+ - Bug Fix:      Postgres integration was failing when expecting Integers and Floats arrived.
+
 AGHAST v0.5.0 (released 2021-08-21) - Simpler Conditions
 - New Feature:   Conditions may now use a value from the triggering message
 
